--- a/index.ipynb
+++ b/index.ipynb
@@ -34,17 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: bs4 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (0.0.1)\n",
-      "Requirement already satisfied: beautifulsoup4 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from bs4) (4.6.3)\n",
-      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "Collecting bs4\n",
+      "  Downloading https://files.pythonhosted.org/packages/10/ed/7e8b97591f6f456174139ec089c769f89a94a1a4025fe967691de971f314/bs4-0.0.1.tar.gz\n"
      ]
     }
    ],
