--- a/index.ipynb
+++ b/index.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,19 @@
      "output_type": "stream",
      "text": [
       "Collecting bs4\n",
-      "  Downloading https://files.pythonhosted.org/packages/10/ed/7e8b97591f6f456174139ec089c769f89a94a1a4025fe967691de971f314/bs4-0.0.1.tar.gz\n"
+      "  Downloading https://files.pythonhosted.org/packages/10/ed/7e8b97591f6f456174139ec089c769f89a94a1a4025fe967691de971f314/bs4-0.0.1.tar.gz\n",
+      "Requirement already satisfied: beautifulsoup4 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from bs4) (4.7.1)\n",
+      "Requirement already satisfied: soupsieve>=1.2 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from beautifulsoup4->bs4) (1.7.1)\n",
+      "Building wheels for collected packages: bs4\n",
+      "  Running setup.py bdist_wheel for bs4 ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/Botafogo1894/.cache/pip/wheels/a0/b0/b2/4f80b9456b87abedbc0bf2d52235414c3467d8889be38dd472\n",
+      "Successfully built bs4\n",
+      "\u001b[31msmart-open 1.8.0 requires bz2file, which is not installed.\u001b[0m\n",
+      "\u001b[31mnltk 3.4 requires singledispatch, which is not installed.\u001b[0m\n",
+      "Installing collected packages: bs4\n",
+      "Successfully installed bs4-0.0.1\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 19.0.3 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
