Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<h1 class=\"event-title\" itemprop=\"summary\"><a href=\"/events/1171450\" itemprop=\"url\" title=\"Event details of Claude Von Stroke World Tour 2018\">Claude Von Stroke World Tour 2018</a> <span>at <a href=\"/club.aspx?id=158067\">HQ2 Nightclub</a></span></h1>]"
+       "[<h1 class=\"event-title\" itemprop=\"summary\"><a href=\"/events/1239078\" itemprop=\"url\" title=\"Event details of Katmosphere \">Katmosphere </a> <span>at <span class=\"grey\" style=\"display:inline;\">Valley Arts Community Gallery</span></span></h1>]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
